# cyber_rogue_old

./: Cargo.toml  config.toml  cyber_rogue
data/entities/: feature_packs.yml  mobs.yml
data/entities/lists/mob/: goblins
data/entities/prototypes/: example.yml  mobs.yml
data/entities/templates/: example.yml  mobs.yml
old_src/: main.rs
old_src/game/: mod.rs
old_src/game/entity/: ai.rs  components.rs  emplacement.rs  entities.rs  manager.rs  mod.rs  stats.rs
old_src/game/mapping/: map.rs  tile.rs
old_src/sys/: config.rs  controls.rs  render.rs
src/: main.rs
src/game/: mod.rs
src/game/entity/: ai.rs  emplacement.rs  mod.rs  object.rs  stats.rs  structs.rs
src/game/entity/components/: component_base.rs  mod.rs  selector.rs  simple.rs
src/game/mapping/: map.rs  mod.rs  rect.rs  room.rs  tile.rs
src/map/: generator.rs  map.rs  mod.rs  rect.rs  room.rs  tile.rs
src/object/: mod.rs  object.rs
src/sys/: config.rs  controls.rs  mod.rs  render.rs
src/sys/data_manager/: manager.rs  mod.rs
src/sys/entity_builder/: builder.rs  mod.rs
src/sys/entity_manager/: manager.rs  mod.rs  storage.rs
src/sys/template_manager/: manager.rs  mod.rs
src/utility/: list.rs  mod.rs
src/utility/config/: loader.rs  mod.rs  structs.rs
